--- a/nr/index.html
+++ b/nr/index.html
@@ -12,7 +12,7 @@
         <div class="tx">7 Wonders</div>
         <div class="tx1">A journey through the part of history</div>
         <section id="section05" class="demo">
-            <a href="page.html"><span></span>Let's journey begins</a>
+            <a href="guide.html"><span></span>Let's journey begins</a>
         </section>
         
 </body>
