--- a/nr/page.html
+++ b/nr/page.html
@@ -12,8 +12,9 @@
     <div class="rr"></div>
     <div class="tt"></div>
     <div class="bb"></div>
+    <img src="img/mark.png" class="fish" onclick="myFunction()"/>
     
     
- 
+ <script src="js/js.js"></script>
 </body>
 </html>
