--- a/7wonder/page1.html
+++ b/7wonder/page1.html
@@ -24,22 +24,24 @@
 </head>
 
 <body>
+    <div class="btn btn-success left" align="left">
+        <a href="page.html">Back</a>
+    </div>
     <div class="btn btn-danger right" align="right">
-        <a href="page1.html">Next</a>
+        <a href="page2.html">Next</a>
     </div>
     <div class="container-fluid">
         <center>
             <div class="row">
                 <div class="col-sm">
-                    <button class="buttonTop button3" onclick="changePin(1)">Old Age</button>
+                    <button class="buttonTop button2" onclick="changePin(2)">Middle Age</button>
                 </div>
             </div>
-                
             <div class="row">
                 <div class="col-sm">
                     <div class="">
                         <div class="">
-                            <script src="js/map.js"></script>
+                            <script src="js/map1.js"></script>
                             <div id="chartdiv"></div>
                         </div>
                     </div>
