--- a/7wonder/page.html
+++ b/7wonder/page.html
@@ -47,33 +47,33 @@
             </div><br>
             <div class="row">
                 <div class="col-sm">
-                    <button  class="buttonFt buttonFt2" onclick="window.location.href='old/giza.html'">
+                    <button  class="buttonFt buttonFt2" onclick="window.location.href='old/o1.html'">
                         <div id="button1">
 
                         </div>
                     </button></div>
                 <div class="col-sm">
-                    <button class="buttonFt buttonFt2" onclick="">
+                    <button class="buttonFt buttonFt2" onclick="window.location.href='old/o2.html'">
                         <div id="button2"></div>
                     </button></div>
                 <div class="col-sm">
-                    <button class="buttonFt buttonFt2" onclick="">
+                    <button class="buttonFt buttonFt2" onclick="window.location.href='old/o3.html'">
                         <div id="button3"></div>
                     </button></div>
                 <div class="col-sm">
-                    <button class="buttonFt buttonFt2" onclick="">
+                    <button class="buttonFt buttonFt2" onclick="window.location.href='old/o4.html'">
                         <div id="button4"></div>
                     </button></div>
                 <div class="col-sm">
-                    <button class="buttonFt buttonFt2" onclick="">
+                    <button class="buttonFt buttonFt2" onclick="window.location.href='old/o5.html'">
                         <div id="button5"></div>
                     </button></div>
                 <div class="col-sm">
-                    <button class="buttonFt buttonFt2" onclick="">
+                    <button class="buttonFt buttonFt2" onclick="window.location.href='old/o6.html'">
                         <div id="button6"></div>
                     </button></div>
                 <div class="col-sm">
-                    <button class="buttonFt buttonFt2" onclick="">
+                    <button class="buttonFt buttonFt2" onclick="window.location.href='old/o7.html'">
                         <div id="button7"></div>
                     </button></div>
             </div>
