--- a/7wonder/page1.html
+++ b/7wonder/page1.html
@@ -49,31 +49,31 @@
             </div><br>
             <div class="row">
                 <div class="col-sm">
-                    <button class="buttonFt buttonFt2" onclick="">
+                    <button class="buttonFt buttonFt2" onclick="window.location.href='mid/m1.html'">
                         <div id="button1"></div>
                     </button></div>
                 <div class="col-sm">
-                    <button class="buttonFt buttonFt2" onclick="">
+                    <button class="buttonFt buttonFt2" onclick="window.location.href='mid/m2.html'">
                         <div id="button2"></div>
                     </button></div>
                 <div class="col-sm">
-                    <button class="buttonFt buttonFt2" onclick="">
+                    <button class="buttonFt buttonFt2" onclick="window.location.href='mid/m3.html'">
                         <div id="button3"></div>
                     </button></div>
                 <div class="col-sm">
-                    <button class="buttonFt buttonFt2" onclick="">
+                    <button class="buttonFt buttonFt2" onclick="window.location.href='mid/m4.html'">
                         <div id="button4"></div>
                     </button></div>
                 <div class="col-sm">
-                    <button class="buttonFt buttonFt2" onclick="">
+                    <button class="buttonFt buttonFt2" onclick="window.location.href='mid/m5.html'">
                         <div id="button5"></div>
                     </button></div>
                 <div class="col-sm">
-                    <button class="buttonFt buttonFt2" onclick="">
+                    <button class="buttonFt buttonFt2" onclick="window.location.href='mid/m6.html'">
                         <div id="button6"></div>
                     </button></div>
                 <div class="col-sm">
-                    <button class="buttonFt buttonFt2" onclick="">
+                    <button class="buttonFt buttonFt2" onclick="window.location.href='mid/m7.html'">
                         <div id="button7"></div>
                     </button></div>
             </div>
