--- a/7wonder/page2.html
+++ b/7wonder/page2.html
@@ -46,31 +46,31 @@
             </div><br>
             <div class="row">
                 <div class="col-sm">
-                    <button class="buttonFt buttonFt2" onclick="">
+                    <button class="buttonFt buttonFt2" onclick="window.location.href='new/n1.html'">
                         <div id="button1"></div>
                     </button></div>
                 <div class="col-sm">
-                    <button class="buttonFt buttonFt2" onclick="">
+                    <button class="buttonFt buttonFt2" onclick="window.location.href='new/n2.html'">
                         <div id="button2"></div>
                     </button></div>
                 <div class="col-sm">
-                    <button class="buttonFt buttonFt2" onclick="">
+                    <button class="buttonFt buttonFt2" onclick="window.location.href='new/n3.html'">
                         <div id="button3"></div>
                     </button></div>
                 <div class="col-sm">
-                    <button class="buttonFt buttonFt2" onclick="">
+                    <button class="buttonFt buttonFt2" onclick="window.location.href='new/n4.html'">
                         <div id="button4"></div>
                     </button></div>
                 <div class="col-sm">
-                    <button class="buttonFt buttonFt2" onclick="">
+                    <button class="buttonFt buttonFt2" onclick="window.location.href='new/n5.html'">
                         <div id="button5"></div>
                     </button></div>
                 <div class="col-sm">
-                    <button class="buttonFt buttonFt2" onclick="">
+                    <button class="buttonFt buttonFt2" onclick="window.location.href='new/n6.html'">
                         <div id="button6"></div>
                     </button></div>
                 <div class="col-sm">
-                    <button class="buttonFt buttonFt2" onclick="">
+                    <button class="buttonFt buttonFt2" onclick="window.location.href='new/n7.html'">
                         <div id="button7"></div>
                     </button></div>
             </div>
