--- a/7wonder/mid/m1.html
+++ b/7wonder/mid/m1.html
@@ -8,6 +8,13 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <title>Document</title>
     <style>
+      body{
+      background: url(../img/bg2.jpg) center center / cover no-repeat;
+      background-attachment: relative;
+	    background-position: center top;
+      background-repeat: no-repeat;
+      overflow: hidden;
+      }
       div{
         margin-top: 5%;
       }
@@ -23,12 +30,20 @@
     margin-right: auto;
     width: 100%;
 }
-#img{
-  margin-top: 10%;
-  width: 100%;
+
+.left {
+  margin-top:40%;
+  margin-left:48%;
+  position: absolute;
+  z-index: 1;
+  font-size: 20px;
 }
     </style>
 </head>
+<body>
+  <div class="btn btn-success left" >
+    <a href="../page1.html">Back</a>
+</div>
 <div class="row"> 
   <section class="tm-2-col-img-text tm-2-col-img-lg-left">
 
@@ -40,9 +55,9 @@
           <h2 style="text-shadow: 0 0 2px gray, 0 0 3px gray;" class="tm-2-col-text-title">1.หลุมฝังศพแห่งอเล็กซานเดรีย (Catacombs of Kom El Shoqafa)</h2>
           <p class="tm-2-col-text-description">
             
-            <h4>เป็นสถานที่ฝังศพใต้ดินของกษัตริย์อียิปต์โบราณอีกแบบหนึ่ง อยู่ที่เมืองอเล็กซานเดรีย ประเทศอียิปต์ อุโมงค์แห่งนี้มีชื่อเรียกว่า คาตาโกมบ์ (catacombs) โดยขุดลึกเข้าไปในภูเขาหินทรายเป็นขั้นๆ บางตอนมีความลึกถึง 70-80 ฟุต มีทางเดินกว้าง 3-4 ฟุต ทางเดินจะวกไปเวียนมาเป็นระยะทางนับร้อยไมล์ ผนังอุโมงค์ถูกเจาะเป็นช่อง ๆ ลึกเข้าไปเพื่อใช้เป็นที่บรรจุศพ มีแท่นบูชาและตะเกียงดวงเล็ก ๆ แขวนไว้ บางส่วนของอุโมงค์แห่งนี้ได้ตบแต่งเอาไว้อย่างวิจิตรพิสดาร ปีที่สร้าง ประมาณ 200 ad
+            <h4>เป็นสถานที่ฝังศพใต้ดินของกษัตริย์อียิปต์โบราณอีกแบบหนึ่ง อยู่ที่เมืองอเล็กซานเดรีย ประเทศอียิปต์ อุโมงค์แห่งนี้มีชื่อเรียกว่า คาตาโกมบ์ (catacombs) โดยขุดลึกเข้าไปในภูเขาหินทรายเป็นขั้นๆ บางตอนมีความลึกถึง 70-80 ฟุต มีทางเดินกว้าง 3-4 ฟุต ทางเดินจะวกไปเวียนมาเป็นระยะทางนับร้อยไมล์ ผนังอุโมงค์ถูกเจาะเป็นช่อง ๆ ลึกเข้าไปเพื่อใช้เป็นที่บรรจุศพ มีแท่นบูชาและตะเกียงดวงเล็ก ๆ แขวนไว้ บางส่วนของอุโมงค์แห่งนี้ได้ตบแต่งเอาไว้อย่างวิจิตรพิสดาร 
             </h4><br>
-          <h4 style="font-size:22px;color:orange;"><b>Create at 2584-2561 BC</b></h4>
+          <h4 style="font-size:22px;color:rgb(0, 0, 0);"><b>Create at ≈200 AD</b></h4>
           </p>
       </div>
 
