--- a/7wonder/new/n1.html
+++ b/7wonder/new/n1.html
@@ -8,6 +8,13 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <title>Document</title>
     <style>
+      body{
+      background: url(../img/bg2.jpg) center center / cover no-repeat;
+      background-attachment: relative;
+	    background-position: center top;
+      background-repeat: no-repeat;
+      overflow: hidden;
+      }
       div{
         margin-top: 5%;
       }
@@ -23,8 +30,19 @@
     margin-right: auto;
     width: 100%;
 }
+.left {
+  margin-top:40%;
+  margin-left:48%;
+  position: absolute;
+  z-index: 1;
+  font-size: 20px;
+}
     </style>
 </head>
+<body>
+  <div class="btn btn-success left" >
+    <a href="../page2.html">Back</a>
+</div>
 <div class="row"> 
   <section class="tm-2-col-img-text tm-2-col-img-lg-left">
 
@@ -39,7 +57,7 @@
             <h4>ศูนย์กลางสำคัญทางอารยธรรมในแทบทุกด้านของชนเผ่ามายาที่อาศัยอยู่ในประเทศเม็กซิโกช่วง ค.ศ. 600-1200 ถือเป็นชนเผ่าที่มีพัฒนาการด้านดาราศาสตร์ สถาปัตยกรรม ปรัชญา ฯลฯ ที่ทันสมัย และได้รับการยอมรับที่สุดในยุคศตวรรษที่ 10-15 ดังจะเห็นได้จากสถาปัตยกรรมต่างๆ ที่หลงเหลืออยู่ภายในเขตโบราณสถานชิเชนอิตซาที่ยิ่งใหญ่ และเปี่ยมไปด้วยมนต์ขลังของการก่อสร้างอันน่าทึ่ง ซึ่งคำว่าชิเชนอิตซา (Chichen Itza) ในภาษามายานั้นมีความหมายว่า ต้นทางแห่งความสุขของประชาชน โดยปัจจุบันพื้นที่ตรงนี้ถูกยกให้เป็นหนึ่งในเขตโบราณสถานทรงคุณค่าที่สุดชิ้นหนึ่งของโลก บนพื้นที่กว่า 64 ตารางกิโลเมตรนั้นมีทั้ง วิหารพีระมิด พระราชวัง หอดูดาว โรงอาบน้ำ ฯลฯ จนถูกยกให้เป็นพื้นที่ทางมรดกโลกที่สำคัญที่สุดแห่งหนึ่งของโลก
                 
             </h4><br>
-          <h4 style="font-size:22px;color:orange;"><b>Create at 600 AD</b></h4>
+          <h4 style="font-size:22px;color:rgb(0, 0, 0);"><b>Create at 600 AD</b></h4>
           </p>
       </div>
 
