--- a/7wonder/new/n2.html
+++ b/7wonder/new/n2.html
@@ -8,6 +8,13 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <title>Document</title>
     <style>
+      body{
+      background: url(../img/bg2.jpg) center center / cover no-repeat;
+      background-attachment: relative;
+	    background-position: center top;
+      background-repeat: no-repeat;
+      overflow: hidden;
+      }
       div{
         margin-top: 5%;
       }
@@ -23,8 +30,19 @@
     margin-right: auto;
     width: 100%;
 }
+.left {
+  margin-top:40%;
+  margin-left:48%;
+  position: absolute;
+  z-index: 1;
+  font-size: 20px;
+}
     </style>
 </head>
+<body>
+  <div class="btn btn-success left" >
+    <a href="../page2.html">Back</a>
+</div>
 <div class="row"> 
   <section class="tm-2-col-img-text tm-2-col-img-lg-left">
 
@@ -39,7 +57,7 @@
             <h4>อยู่บนยอดเขากอร์โกวาดู ในนครรีโอเดจาเนโร ประเทศบราซิล ได้รับการลงคะแนนเป็น 1 ใน 7 สิ่งมหัศจรรย์ของโลกยุคใหม่ และถือเป็นสัญญาลักษณ์ของนครรีโอเดจาเนโร และที่ยึดเหนี่ยวทางจิตใจของชาวคริสต์ในประเทศบราซิลทั้งหมด ทั้งยังเป็นแหล่งท่องเที่ยวยอดนิยมของเมือง เป็นรูปปั้นสูง 30 เมตร กว้าง 38 เมตร ( วัดจากปลายแขนซ้าย ถึงปลายแขนขวา ) มีน้ำหนัก 635 ตัน ตั้งอยู่บนจุดสูงสุดของยอดเขากอร์โกวาดูในอุทยานแห่งชาติทิจูคาในตำแหน่งที่สามารถมองเห็นมหานครรีโอเดจาเนโรได้ทั้งหมด ถือเป็นรูปปั้นพระเยซูคริสต์ขนาดใหญ่ที่สุดในโลก ที่ตั้งอยู่บนระดับความสูง 710 เมตร
                 
             </h4><br>
-          <h4 style="font-size:22px;color:orange;"><b>Create at1931 AD </b></h4>
+          <h4 style="font-size:22px;color:rgb(0, 0, 0);"><b>Create at 1931 AD </b></h4>
           </p>
       </div>
 
