--- a/7wonder/new/n3.html
+++ b/7wonder/new/n3.html
@@ -8,6 +8,13 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <title>Document</title>
     <style>
+      body{
+      background: url(../img/bg2.jpg) center center / cover no-repeat;
+      background-attachment: relative;
+	    background-position: center top;
+      background-repeat: no-repeat;
+      overflow: hidden;
+      }
       div{
         margin-top: 5%;
       }
@@ -23,8 +30,19 @@
     margin-right: auto;
     width: 100%;
 }
+.left {
+  margin-top:40%;
+  margin-left:48%;
+  position: absolute;
+  z-index: 1;
+  font-size: 20px;
+}
     </style>
 </head>
+<body>
+  <div class="btn btn-success left" >
+    <a href="../page2.html">Back</a>
+</div>
 <div class="row"> 
   <section class="tm-2-col-img-text tm-2-col-img-lg-left">
 
@@ -39,7 +57,7 @@
             <h4>มาชู ปิกชู (Machu Picchu) เป็นซากเมืองโบราณของอารยธรรมอินคา อดีตนั้นเมืองแห่งนี้เข้าถึงได้ยาก มีความเร้นลับและมหัศจรรย์ เพราะตั้งอยู่บนภูเขาสูง อันเป็นภูเขาส่วนหนึ่งในแนวเทือกเขาแอนดีสที่สูงใหญ่ที่สุดในโลก มาชู ปิกชู สร้างขึ้นในช่วงศตวรรษที่ 15 เคยเป็นดินแดนที่มีความเจริญรุ่งเรืองในยุคที่อาณาจักรอินคาอยู่ในยุคเฟื่องฟู แต่เมื่ออาณาจักรอินคาต้องล่มสลายด้วยการขยายอำนาจของสเปน มาชู ปิกชู ก็ถูกทอดทิ้ง กลายเป็นเมืองสาบสูญไปในช่วงศตวรรษที่ 16 และได้กลับกลายมาเป็นแหล่งท่องเที่ยวในฝันของนักเดินทางจากทั่วโลกอีกครั้ง หลังจากการค้นพบโดย Hiram Bingham ในปี ค.ศ. 1911
                 
             </h4><br>
-          <h4 style="font-size:22px;color:orange;"><b>Create at 600 BC</b></h4>
+          <h4 style="font-size:22px;color:rgb(0, 0, 0);"><b>Create at 1450 AD</b></h4>
           </p>
       </div>
 
