--- a/7wonder/new/n6.html
+++ b/7wonder/new/n6.html
@@ -8,6 +8,13 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <title>Document</title>
     <style>
+      body{
+      background: url(../img/bg2.jpg) center center / cover no-repeat;
+      background-attachment: relative;
+	    background-position: center top;
+      background-repeat: no-repeat;
+      overflow: hidden;
+      }
       div{
         margin-top: 5%;
       }
@@ -23,8 +30,19 @@
     margin-right: auto;
     width: 100%;
 }
+.left {
+  margin-top:40%;
+  margin-left:48%;
+  position: absolute;
+  z-index: 1;
+  font-size: 20px;
+}
     </style>
 </head>
+<body>
+  <div class="btn btn-success left" >
+    <a href="../page2.html">Back</a>
+</div>
 <div class="row"> 
   <section class="tm-2-col-img-text tm-2-col-img-lg-left">
 
@@ -39,7 +57,7 @@
             <h4>ทัชมาฮาลเป็นอาคารฝังศพสร้างด้วยหินอ่อนสีขาวงาช้าง ตั้งอยู่บนฝั่งแม่น้ำทางใต้ของแม่น้ำยมุนา ในเมืองอัคระ รัฐอุตตรประเทศ ประเทศอินเดีย ทับมาฮาลสร้างขึ้นโดยจักรพรรดิโมกุล จักรพรรดิชาห์ชะฮัน (ครองราชย์ 1628 ถึง 1658) เพื่อตั้งศพของพระสนมเอก มุมตาช มหัล และเป็นที่ตั้งพระศพของจักรพรรดิชาห์ชะฮันเอง ทัชมาฮาลประกอบด้วยตัวอาคารสุสาน, มัสยิด และเกสต์เฮาส์ รายล้อมด้วยสวน การก่อสร้างทัชมาฮาลสำเร็จสมบูรณ์ในปี 1643 แต่มีการก่อสร้างในเฟสอื่น ๆ ชองโครงการที่ดำเนินต่อไปอีกกว่า 10 ปี
                 
             </h4><br>
-          <h4 style="font-size:22px;color:orange;"><b>Create at 1643 AD </b></h4>
+          <h4 style="font-size:22px;color:rgb(0, 0, 0);"><b>Create at 1643 AD </b></h4>
           </p>
       </div>
 
