--- a/7wonder/old/o2.html
+++ b/7wonder/old/o2.html
@@ -8,6 +8,13 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <title>Document</title>
     <style>
+      body{
+      background: url(../img/bg2.jpg) center center / cover no-repeat;
+      background-attachment: relative;
+	    background-position: center top;
+      background-repeat: no-repeat;
+      overflow: hidden;
+      }
       div{
         margin-top: 5%;
       }
@@ -23,8 +30,20 @@
     margin-right: auto;
     width: 100%;
 }
+.left {
+  margin-top:40%;
+  margin-left:48%;
+  position: absolute;
+  z-index: 1;
+  font-size: 20px;
+}
+
     </style>
 </head>
+<body>
+  <div class="btn btn-success left" >
+    <a href="../page.html">Back</a>
+</div>
 <div class="row"> 
   <section class="tm-2-col-img-text tm-2-col-img-lg-left">
 
@@ -39,7 +58,7 @@
             <h4>บาบิโลนเป็นนครของชาวเซไม้ท์กลุ่มหนึ่ง อยู่ทางภาคใต้ของบริเวณเมโสโปเตเมีย เมื่อประมาณ 2,350 ก่อน ค.ศ. ซึ่งพัฒนาต่อๆมาเป็นนครใหญ่และสวยงามมากแห่งหนึ่งของโลก มีกำแพงเมืองล้อมรอบตัวเมืองเป็นระยะทางเกือบ 8 กิโลเมตร มีหอคอยกั้นระหว่างกำแพงเป็นระยะๆ มีประตูเมือง 8 แห่ง เข้าสู่ภายในเมือง ตัวอาคารสร้างด้วยอิฐ ตรงประตูเมืองวาดภาพเป็นรูปสัตว์นับร้อยๆ ภาพ ตกแต่งสวยงาม มีถนนบนกำแพงเมืองกว้างพอให้ทหารเดินไปรอบๆเมือง เพื่อป้องกันข้าศึกรุุกรานเมือง
                 
             </h4><br>
-          <h4 style="font-size:22px;color:orange;"><b>Create at 600 BC</b></h4>
+          <h4 style="font-size:22px;color:rgb(0, 0, 0);"><b>Create at 600 BC</b></h4>
           </p>
       </div>
 
