--- a/7wonder/old/o3.html
+++ b/7wonder/old/o3.html
@@ -8,6 +8,13 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <title>Document</title>
     <style>
+      body{
+      background: url(../img/bg2.jpg) center center / cover no-repeat;
+      background-attachment: relative;
+	    background-position: center top;
+      background-repeat: no-repeat;
+      overflow: hidden;
+      }
       div{
         margin-top: 5%;
       }
@@ -23,8 +30,20 @@
     margin-right: auto;
     width: 100%;
 }
+.left {
+  margin-top:40%;
+  margin-left:48%;
+  position: absolute;
+  z-index: 1;
+  font-size: 20px;
+}
+
     </style>
 </head>
+<body>
+  <div class="btn btn-success left" >
+    <a href="../page.html">Back</a>
+</div>
 <div class="row"> 
   <section class="tm-2-col-img-text tm-2-col-img-lg-left">
 
@@ -38,7 +57,7 @@
             
             <h4>สร้างด้วยหินอ่อน เลียบแบบศิลปะแบบกรีก เพื่อถวายเทพเจ้าอาร์เทมีส (เทพเจ้าแห่งดวงจันทร์ของกรีก) ผู้มาจากสวรรค์ ผู้ช่วยชาวเมืองให้พ้นจากหายนะและภัยพิบัติได้ อยู่ในเมืองอีเฟซุส  บนชายฝั่งแห่งหนึ่ง  (ซึ่งปัจจุบันนี้ คือประเทศตุรกี) ในรัชสมัยของกษัตริย์อเล็กซานเดอร์แห่งกรีก จัดเป็นวิหารที่สวยงามแห่งหนึ่งจนกลายเป็นที่รู้จักว่า เป็นสิ่งมหัศจรรย์ของโลกในยุคเก่า  วิหารนี้มีเนื้อที่ถึง 54,720 ตารางฟุต ตัวอาคารมีความกว้างถึง 400 ฟุต บริเวณโดยรอบวัดแห่งนี้กินเนื้อที่เกือบ 2 เอเคอร์ และมีเสาหินตั้งตระหง่านรอบตัวอาคารมากกว่า 100 เสาหิน แต่ละเสาหินมีเส้นผ่านศุนย์กลาง 6 ฟุต ความสูง 60 ฟุต หลังคาปูด้วยกระเบื้องหินอ่อน ตัววิหารเคยถูกไฟไหม้เสียหายครึ่งหนึ่งแต่ได้รับการซ่อมแซมใหม่โดยกษัตริย์อเล็กซานเดอร์ 
             </h4><br>
-          <h4 style="font-size:22px;color:orange;"><b>Create at 550 BC</b></h4>
+          <h4 style="font-size:22px;color:rgb(0, 0, 0);"><b>Create at 550 BC and again at 323 BC</b></h4>
           </p>
       </div>
 
