--- a/7wonder/old/o4.html
+++ b/7wonder/old/o4.html
@@ -8,6 +8,13 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <title>Document</title>
     <style>
+      body{
+      background: url(../img/bg2.jpg) center center / cover no-repeat;
+      background-attachment: relative;
+	    background-position: center top;
+      background-repeat: no-repeat;
+      overflow: hidden;
+      }
       div{
         margin-top: 5%;
       }
@@ -23,8 +30,20 @@
     margin-right: auto;
     width: 100%;
 }
+.left {
+  margin-top:40%;
+  margin-left:48%;
+  position: absolute;
+  z-index: 1;
+  font-size: 20px;
+}
+
     </style>
 </head>
+<body>
+  <div class="btn btn-success left" >
+    <a href="../page.html">Back</a>
+</div>
 <div class="row"> 
   <section class="tm-2-col-img-text tm-2-col-img-lg-left">
 
@@ -38,7 +57,7 @@
             
             <h4>อนุสาวรีย์นี้เป็นรูปสลักเทพเจ้าซีอุส นั่งบนบัลลังก์สีทองที่แกะสลักด้วยงาช้างจำนวนมากมาประกอบกันขึ้นผู้ที่ปั้นเทวรูปซีอุสนี้ เป็นปฏิมากรเอกชาวกรีก ชื่อ ฟีดีอัส เป็นสิ่งมหัศจรรย์ยุคเก่าแก่สิ่งหนึ่งของโลก คือ สร้างขึ้นประมาณ 2,400 ปีก่อน ระหว่างปี ค.ศ. 53 - 111 ตามตำนานที่จารึกไว้ได้ระบุว่าเทวรูปทำจากงาช้างสูง 58 ฟุต มีขนาดใหญ่กว่าคนปรกติถึง 8 เท่า พระหัตถ์ซ้ายทรงคทา พระหัตถ์ขวารองรับ รูปปั้นแห่งชัยชนะ (A small figure of Victory ) มีเครื่องประดับประดาด้วยทองคำล้วน   ชาวโรมันเรียกอีกชื่อหนึ่งว่า จูปีเตอร์ ชาวกรีกได้เรียกเทวรูปนี้ว่า ซุส ซึ่งเป็นสัญลักษณ์ว่าเป็นผู้นำแห่งเทพเจ้า ซึ่งชาวกรีกนับถื่อมากที่สุดในยุคนั้น
             </h4><br>
-          <h4 style="font-size:22px;color:orange;"><b>Create at 435 BC</b></h4>
+          <h4 style="font-size:22px;color:rgb(0, 0, 0);"><b>Create at 435 BC</b></h4>
           </p>
       </div>
 
