--- a/7wonder/old/o5.html
+++ b/7wonder/old/o5.html
@@ -8,6 +8,13 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <title>Document</title>
     <style>
+      body{
+      background: url(../img/bg2.jpg) center center / cover no-repeat;
+      background-attachment: relative;
+	    background-position: center top;
+      background-repeat: no-repeat;
+      overflow: hidden;
+      }
       div{
         margin-top: 5%;
       }
@@ -23,8 +30,20 @@
     margin-right: auto;
     width: 100%;
 }
+.left {
+  margin-top:40%;
+  margin-left:48%;
+  position: absolute;
+  z-index: 1;
+  font-size: 20px;
+}
+
     </style>
 </head>
+<body>
+  <div class="btn btn-success left" >
+    <a href="../page.html">Back</a>
+</div>
 <div class="row"> 
   <section class="tm-2-col-img-text tm-2-col-img-lg-left">
 
@@ -38,7 +57,7 @@
             
             <h4>สุสานเก่าแก่ของพระเจ้ามุสโซลุส กษัตริย์แห่งเอเซียไมเนอร์ หรือเปอร์เซียในปัจจุบัน สร้างโดยพระมเหสี  ชื่อ อาเตมีสเซีย ซึ่งเป็นทั้งพระขนิษฐาของพระองค์ด้วย ความตายของพระสวามี ทำให้พระนางเสียพระทัยมากถึงขนาดผสมเถ้าถ่านกระดูกของพระสวามีกับเครื่องดื่มของพระองค์ จึงสร้างสุสานไว้เป็นที่ระลึก คำว่า MAUSOLEUM จึงถูกใช้ขนานนามสุสานขนาดใหญ่ ๆ ในเวลาต่อมา โดยสุสานเก่าแก่ซึ่งได้ชื่อว่าเป็นสิ่งมหัศจรรย์ของโลกนี้ เป็นผลงานของนายช่างผู้สร้างสรรค์ทั้ง 4 คน ด้วยกัน คือ ฟิดิอัส , ชาติรัสบายฮาซีส , สโคปปาส และ ทิโมทิอัส สร้างด้วยหินอ่อน มีขนาดสูงถึง 140 ฟุต ฐานโดยรอบยาวถึง 460 ฟุต บนยอดสุดเป็นพื้นเหลี่ยม เล็กกว่าฐานล่าง ได้ปั้นเป็นรูปราชรถและม้า 1 ชุด กำลังวิ่ง และมีกษัตริย์พระมเหสียืนอยู่บนราชรถม้า ประกอบด้วยลวดลาย สวยงามมาก
             </h4><br>
-          <h4 style="font-size:22px;color:orange;"><b>Create at 351 BC</b></h4>
+          <h4 style="font-size:22px;color:rgb(0, 0, 0);"><b>Create at 351 BC</b></h4>
           </p>
       </div>
 
