--- a/7wonder/old/o6.html
+++ b/7wonder/old/o6.html
@@ -8,6 +8,13 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <title>Document</title>
     <style>
+      body{
+      background: url(../img/bg2.jpg) center center / cover no-repeat;
+      background-attachment: relative;
+	    background-position: center top;
+      background-repeat: no-repeat;
+      overflow: hidden;
+      }
       div{
         margin-top: 5%;
       }
@@ -23,8 +30,20 @@
     margin-right: auto;
     width: 100%;
 }
+.left {
+  margin-top:40%;
+  margin-left:48%;
+  position: absolute;
+  z-index: 1;
+  font-size: 20px;
+}
+
     </style>
 </head>
+<body>
+  <div class="btn btn-success left" >
+    <a href="../page.html">Back</a>
+</div>
 <div class="row"> 
   <section class="tm-2-col-img-text tm-2-col-img-lg-left">
 
@@ -38,7 +57,7 @@
             
             <h4>รูปของเทพเจ้าเฮลิออส หรืออพอลโล สูงประมาณ 32 เมตร และมีน้ำหนักประมาณ 295 ตัน  หล่อด้วยทองสัมฤทธิ์ในท่ายืน ตัวเทวรูปตั้งอยู่บนฐานทั้งสองข้างของปากอ่าว องค์เทวรูปยืนถ่างคร่อมปากอ่าวให้เรือลอดได้ มีกระจกบานใหญ่ติดอยู่บนอกทำให้เรือที่แล่นออกจากอียิปต์มองเห็นได้ชัดเจน เกิดจากการที่ชาวเกาะโรดส์ได้ตัดสินใจร่วมรบกับพระเจ้าปโตเลมีแห่งอียิปต์ จากการรุกรานของชาวแมซีโดเนียน พวกแมซีโดเนียนเข้าล้อมเกาะไว้ด้วยเรือและทหารมาก มาย แต่ชาวเกาะโรดส์ก็ได้ตีกลับ และเกิดการปะทะกันอยู่เกือบปีจนได้รับชัยชนะ ในบรรดาผู้ที่ร่วมปกป้องเกาะโรดส์ก็มี ปฏิมากรผู้หนึ่งชื่อว่า ชาเรส แห่งลินดัส ด้วยความยินดีปรีดาของชาวโรดส์ และเพื่อเป็นอนุสรณ์แห่งการหลุดพ้นจากชาว แมซีโดเนียน ชาร์เรส จึงได้รับมอบหมายให้สร้างรูปปั้นบรอนซ์มหึมาของเทพเจ้าแห่งพระอาทิตย์ หรืออพอลโล
             </h4><br>
-          <h4 style="font-size:22px;color:orange;"><b>Create at 292–280 BC</b></h4>
+          <h4 style="font-size:22px;color:rgb(0, 0, 0);"><b>Create at 292–280 BC</b></h4>
           </p>
       </div>
 
