--- a/7wonder/mid/m2.html
+++ b/7wonder/mid/m2.html
@@ -8,6 +8,13 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <title>Document</title>
     <style>
+      body{
+      background: url(../img/bg2.jpg) center center / cover no-repeat;
+      background-attachment: relative;
+	    background-position: center top;
+      background-repeat: no-repeat;
+      overflow: hidden;
+      }
       div{
         margin-top: 5%;
       }
@@ -23,12 +30,20 @@
     margin-right: auto;
     width: 100%; 
 }
-#img{
-  margin-top: 5%;
-  width: 100%;
+
+.left {
+  margin-top:40%;
+  margin-left:48%;
+  position: absolute;
+  z-index: 1;
+  font-size: 20px;
 }
     </style>
 </head>
+<body>
+  <div class="btn btn-success left" >
+    <a href="../page1.html">Back</a>
+</div>
 <div class="row"> 
   <section class="tm-2-col-img-text tm-2-col-img-lg-left">
 
@@ -40,9 +55,9 @@
           <h2 style="text-shadow: 0 0 2px gray, 0 0 3px gray;" class="tm-2-col-text-title">2.สโตนเฮนจ์ (Stonehenge)</h2>
           <p class="tm-2-col-text-description">
             
-            <h4>ตั้งอยู่กลาง “ทุ่งราบซัลลิสเบอร์รี่” (Salisbury Plain) บริเวณตอนใต้ของเกาะอังกฤษ สามารถมองเห็นได้อย่างชัดเจนเพราะบริเวณโดยรอบนั้นไม่มีสิ่งปลูกสร้างอื่นใดเลย มีจำนวนแท่งหินทั้งหมด 112 ก้อน ตั้งเรียงเป็นวงกลมซ้อนกัน 3 วง และวางเรียงในลักษณะที่ต่างกัน ทั้งวางนอน วางพาดกัน และวางตั้งขึ้น ปีที่สร้าง ตั้งแต่ 3000bc ถึง 2000bc
+            <h4>ตั้งอยู่กลาง “ทุ่งราบซัลลิสเบอร์รี่” (Salisbury Plain) บริเวณตอนใต้ของเกาะอังกฤษ สามารถมองเห็นได้อย่างชัดเจนเพราะบริเวณโดยรอบนั้นไม่มีสิ่งปลูกสร้างอื่นใดเลย มีจำนวนแท่งหินทั้งหมด 112 ก้อน ตั้งเรียงเป็นวงกลมซ้อนกัน 3 วง และวางเรียงในลักษณะที่ต่างกัน ทั้งวางนอน วางพาดกัน และวางตั้งขึ้น
             </h4><br>
-          <h4 style="font-size:22px;color:orange;"><b>Create at 2584-2561 BC</b></h4>
+          <h4 style="font-size:22px;color:rgb(0, 0, 0);"><b>Create at 3000-2000 BC</b></h4>
           </p>
       </div>
 
