--- a/7wonder/mid/m3.html
+++ b/7wonder/mid/m3.html
@@ -8,6 +8,13 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <title>Document</title>
     <style>
+      body{
+      background: url(../img/bg2.jpg) center center / cover no-repeat;
+      background-attachment: relative;
+	    background-position: center top;
+      background-repeat: no-repeat;
+      overflow: hidden;
+      }
       div{
         margin-top: 5%;
       }
@@ -23,12 +30,20 @@
     margin-right: auto;
     width: 100%;
 }
-#img{
-  margin-top: 5%;
-  width: 100%;
+
+.left {
+  margin-top:40%;
+  margin-left:48%;
+  position: absolute;
+  z-index: 1;
+  font-size: 20px;
 }
     </style>
 </head>
+<body>
+  <div class="btn btn-success left" >
+    <a href="../page1.html">Back</a>
+</div>
 <div class="row"> 
   <section class="tm-2-col-img-text tm-2-col-img-lg-left">
 
@@ -40,9 +55,10 @@
           <h2 style="text-shadow: 0 0 2px gray, 0 0 3px gray;" class="tm-2-col-text-title">3.เจดีย์กระเบื้องเคลือบ (Porcelain Tower of Nanjing)</h2>
           <p class="tm-2-col-text-description">
             
-            <h4>ตั้งอยู่ที่วัดต้าเป้าเอินในเมืองนานกิงซึ่งเป็น เมืองเอกของมณฑลเจียงซู อยู่ทางตอนเหนือของจีน สร้างไว้เมื่อประมาณคริสต์ศตวรรษที่ 15 สมัยของราชวงศ์หมิง โดยพุทธศาสนิกชนชาวจีนเป็นผู้สร้างเอาไว้ เจดีย์ออกแบบเป็นทรงแปดเหลี่ยม ความสูงทั้งสิ้น 9 ชั้น หลังคามุงด้วยกระเบื้องเคลือบสีเขียว มีกระดิ่งแขวนไว้ทั้งหมด 80 ลูก เล่ากันว่าบนยอดเจดีย์นั้น มีลูกบอลทำด้วยทองติดอยู่ ประกอบด้วยเหล็กที่เป็นวงแหวนล้อมรอบถึง 9 วง นอกจากี้ยังมีไข่มุกขนาดใหญ่ 5 เม็ดอยู่ที่ปลาย ปีที่สร้าง ประมาณ 1500ad
+            <h4>ตั้งอยู่ที่วัดต้าเป้าเอินในเมืองนานกิงซึ่งเป็น เมืองเอกของมณฑลเจียงซู อยู่ทางตอนเหนือของจีน สร้างไว้เมื่อประมาณคริสต์ศตวรรษที่ 15 สมัยของราชวงศ์หมิง โดยพุทธศาสนิกชนชาวจีนเป็นผู้สร้างเอาไว้ เจดีย์ออกแบบเป็นทรงแปดเหลี่ยม ความสูงทั้งสิ้น 9 ชั้น หลังคามุงด้วยกระเบื้องเคลือบสีเขียว มีกระดิ่งแขวนไว้ทั้งหมด 80 ลูก เล่ากันว่าบนยอดเจดีย์นั้น มีลูกบอลทำด้วยทองติดอยู่ ประกอบด้วยเหล็กที่เป็นวงแหวนล้อมรอบถึง 9 วง นอกจากนี้ยังมีไข่มุกขนาดใหญ่ 5 เม็ดอยู่ที่ปลาย 
+              
             </h4><br>
-          <h4 style="font-size:22px;color:orange;"><b>Create at 2584-2561 BC</b></h4>
+          <h4 style="font-size:22px;color:rgb(0, 0, 0);"><b>Create at ≈1500 AD</b></h4>
           </p>
       </div>
 
