--- a/7wonder/mid/m4.html
+++ b/7wonder/mid/m4.html
@@ -8,6 +8,13 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <title>Document</title>
     <style>
+      body{
+      background: url(../img/bg2.jpg) center center / cover no-repeat;
+      background-attachment: relative;
+	    background-position: center top;
+      background-repeat: no-repeat;
+      overflow: hidden;
+      }
       div{
         margin-top: 5%;
       }
@@ -23,12 +30,20 @@
     margin-right: auto;
     width: 100%;
 }
-#img{
-  margin-top: 10%;
-  width: 100%;
+
+.left {
+  margin-top:40%;
+  margin-left:48%;
+  position: absolute;
+  z-index: 1;
+  font-size: 20px;
 }
     </style>
 </head>
+<body>
+  <div class="btn btn-success left" >
+    <a href="../page1.html">Back</a>
+</div>
 <div class="row"> 
   <section class="tm-2-col-img-text tm-2-col-img-lg-left">
 
@@ -40,9 +55,9 @@
           <h2 style="text-shadow: 0 0 2px gray, 0 0 3px gray;" class="tm-2-col-text-title">4.ฮาเกียโซเฟีย  (Hagia Sophia)</h2>
           <p class="tm-2-col-text-description">
             
-            <h4> ฮาเกียโซเฟีย มีชื่อตรงกับความหมายภาษาอังกฤษว่า “Holy Wisdom” หรือแปลเป็นไทยได้ว่า “ภูมิปัญญาศักดิ์สิทธิ์” ฮากาโซเฟียเป็นโบสถ์ทรงโดมที่ใหญ่ที่สุดในโลก และได้รับการขนานนามว่าเป็น “มหาโบสถ์” (The Great Church)  เนื่องจากมีขนาดใหญ่ที่สุดเมื่อเทียบกับโบสถ์คริสต์ทั่วโลกในยุคนั้น โบสถ์ฮาเกียโซเฟียแห่งนี้ยังเป็นต้นแบบของสถาปัตยกรรมโบสถ์ของคริสต์ศาสนิกชนตะวันตก ยุคไบแซนไทน์ (Byzantine) ทั้งศาสนาคริสต์นิกายออร์โธดอกซ์ (Orthodox) และกรีกคาทอลิก (Greek Catholic) ปีที่สร้าง 532ce
+            <h4> ฮาเกียโซเฟีย มีชื่อตรงกับความหมายภาษาอังกฤษว่า “Holy Wisdom” หรือแปลเป็นไทยได้ว่า “ภูมิปัญญาศักดิ์สิทธิ์” ฮากาโซเฟียเป็นโบสถ์ทรงโดมที่ใหญ่ที่สุดในโลก และได้รับการขนานนามว่าเป็น “มหาโบสถ์” (The Great Church)  เนื่องจากมีขนาดใหญ่ที่สุดเมื่อเทียบกับโบสถ์คริสต์ทั่วโลกในยุคนั้น โบสถ์ฮาเกียโซเฟียแห่งนี้ยังเป็นต้นแบบของสถาปัตยกรรมโบสถ์ของคริสต์ศาสนิกชนตะวันตก ยุคไบแซนไทน์ (Byzantine) ทั้งศาสนาคริสต์นิกายออร์โธดอกซ์ (Orthodox) และกรีกคาทอลิก (Greek Catholic)
             </h4><br>
-          <h4 style="font-size:22px;color:orange;"><b>Create at 2584-2561 BC</b></h4>
+          <h4 style="font-size:22px;color:rgb(0, 0, 0);"><b>Create at 537 AD</b></h4>
           </p>
       </div>
 
