--- a/7wonder/mid/m6.html
+++ b/7wonder/mid/m6.html
@@ -8,6 +8,13 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <title>Document</title>
     <style>
+      body{
+      background: url(../img/bg2.jpg) center center / cover no-repeat;
+      background-attachment: relative;
+	    background-position: center top;
+      background-repeat: no-repeat;
+      overflow: hidden;
+      }
       div{
         margin-top: 5%;
       }
@@ -23,12 +30,20 @@
     margin-right: auto;
     width: 100%;
 }
-#img{
-  margin-top: 10%;
-  width: 100%;
+
+.left {
+  margin-top:40%;
+  margin-left:48%;
+  position: absolute;
+  z-index: 1;
+  font-size: 20px;
 }
     </style>
 </head>
+<body>
+  <div class="btn btn-success left" >
+    <a href="../page1.html">Back</a>
+</div>
 <div class="row"> 
   <section class="tm-2-col-img-text tm-2-col-img-lg-left">
 
@@ -40,9 +55,9 @@
           <h2 style="text-shadow: 0 0 2px gray, 0 0 3px gray;" class="tm-2-col-text-title">6.โคลอสเซียม (Colosseum)</h2>
           <p class="tm-2-col-text-description">
             
-            <h4>หนึ่งในสถานที่ท่องเที่ยวที่มีชื่อเสียงมากที่สุดของกรุงโรมประเทศอิตาลี เป็นสนามกีฬากลางแจ้งโบราณขนาดใหญ่ยักษ์ ใจกลางเมือง ที่นอกจากจะเคยเป็นสนามประลองอันทรงเกียรติที่โหดเหี้ยมแล้ว ยังได้รับการคัดเลือกจากองค์กร New 7 Wonders ให้เป็นหนึ่งในเจ็ดสิ่งมหัศจรรย์ของโลกอีกด้วย สนามกีฬาโบราณขนาดใหญ่แห่งนี้ถูกสร้างขึ้นในสมัยจักรพรรดิเวสเปเซี่ยนแห่งจักวรรดิโรมัน และได้สร้างแล้วเสร็จในสมัยจักรพรรดิไททัสในช่วงคริสต์ศตวรรษที่ 1 หรือราวๆ ปี ค.ศ. 80 โดยมีลักษณะเป็นอัฒจันทร์รูปวงกลมที่ก่อด้วยอิฐและหินทรายที่มีเส้นรอบวงประมาณ 527 เมตร สูงประมาณ 57 เมตร และสามารถบรรจุคนได้มากถึงประมาณ 50,000 คนเลยทีเดียวปีที่สร้าง 80 AD
+            <h4>หนึ่งในสถานที่ท่องเที่ยวที่มีชื่อเสียงมากที่สุดของกรุงโรมประเทศอิตาลี เป็นสนามกีฬากลางแจ้งโบราณขนาดใหญ่ยักษ์ ใจกลางเมือง ที่นอกจากจะเคยเป็นสนามประลองอันทรงเกียรติที่โหดเหี้ยมแล้ว ยังได้รับการคัดเลือกจากองค์กร New 7 Wonders ให้เป็นหนึ่งในเจ็ดสิ่งมหัศจรรย์ของโลกอีกด้วย สนามกีฬาโบราณขนาดใหญ่แห่งนี้ถูกสร้างขึ้นในสมัยจักรพรรดิเวสเปเซี่ยนแห่งจักวรรดิโรมัน และได้สร้างแล้วเสร็จในสมัยจักรพรรดิไททัสในช่วงคริสต์ศตวรรษที่ 1 หรือราวๆ ปี ค.ศ. 80 โดยมีลักษณะเป็นอัฒจันทร์รูปวงกลมที่ก่อด้วยอิฐและหินทรายที่มีเส้นรอบวงประมาณ 527 เมตร สูงประมาณ 57 เมตร และสามารถบรรจุคนได้มากถึงประมาณ 50,000 คนเลยทีเดียว
             </h4><br>
-          <h4 style="font-size:22px;color:orange;"><b>Create at 2584-2561 BC</b></h4>
+          <h4 style="font-size:22px;color:rgb(0, 0, 0);"><b>Create at 80 AD</b></h4>
           </p>
       </div>
 
