--- a/7wonder/new/n4.html
+++ b/7wonder/new/n4.html
@@ -8,6 +8,13 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <title>Document</title>
     <style>
+      body{
+      background: url(../img/bg2.jpg) center center / cover no-repeat;
+      background-attachment: relative;
+	    background-position: center top;
+      background-repeat: no-repeat;
+      overflow: hidden;
+      }
       div{
         margin-top: 5%;
       }
@@ -23,8 +30,19 @@
     margin-right: auto;
     width: 100%;
 }
+.left {
+  margin-top:40%;
+  margin-left:48%;
+  position: absolute;
+  z-index: 1;
+  font-size: 20px;
+}
     </style>
 </head>
+<body>
+  <div class="btn btn-success left" >
+    <a href="../page2.html">Back</a>
+</div>
 <div class="row"> 
   <section class="tm-2-col-img-text tm-2-col-img-lg-left">
 
@@ -39,7 +57,7 @@
             <h4>กำแพงที่มีป้อมคั่นเป็นช่วง ๆ ของจีนสมัยโบราณ กำแพงส่วนใหญ่ที่ปรากฏในปัจจุบันสร้างขึ้นในสมัยราชวงศ์ฉิน ทั้งนี้เพื่อป้องกันการรุกรานจากพวกฮันส์ หรือชนเผ่าซยงหนู (Xiongnu)ที่เป็นไม้เบื่อไม้เมากับอารยธรรมจีนในยุคต้นๆ ตั้งแต่สมัยราชวงศ์โจว (ราว 400 ปีก่อนคริสตกาล) เนื่องจากจะเข้ามารุกรานจีนตามแนวชายแดนทางเหนือ ในสมัยราชวงค์ฉิน ได้สั่งให้สร้างกำแพงหมื่นลี้ตามชายแดน เพื่อป้องกันพวก ซยงหนู เข้ามารุกราน และพวกเติร์กจากทางเหนือ หลังจากนั้นยังมีการสร้างกำแพงต่ออีกหลายครั้งด้วยกันยิ่งทำให้กำแพงมีความยาวมากขึ้น
                 
             </h4><br>
-          <h4 style="font-size:22px;color:orange;"><b>Create at  700 BC</b></h4>
+          <h4 style="font-size:22px;color:rgb(0, 0, 0);"><b>Create at  700 BC</b></h4>
           </p>
       </div>
 
