--- a/7wonder/new/n5.html
+++ b/7wonder/new/n5.html
@@ -8,6 +8,13 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <title>Document</title>
     <style>
+      body{
+      background: url(../img/bg2.jpg) center center / cover no-repeat;
+      background-attachment: relative;
+	    background-position: center top;
+      background-repeat: no-repeat;
+      overflow: hidden;
+      }
       div{
         margin-top: 5%;
       }
@@ -23,8 +30,19 @@
     margin-right: auto;
     width: 100%;
 }
+.left {
+  margin-top:40%;
+  margin-left:48%;
+  position: absolute;
+  z-index: 1;
+  font-size: 20px;
+}
     </style>
 </head>
+<body>
+  <div class="btn btn-success left" >
+    <a href="../page2.html">Back</a>
+</div>
 <div class="row"> 
   <section class="tm-2-col-img-text tm-2-col-img-lg-left">
 
@@ -39,7 +57,7 @@
             <h4>สถานที่ท่องเที่ยวที่มีชื่อเสียงมากเป็นอันดับต้นๆของโลก นครหินแกะสลักโบราณที่ซ่อนตัวอย่างลึกลับในหุบเขา วาดี มูซา หรือ หุบเขาโมเสส ที่ตั้งอยู่ระหว่างทะเลสาบเดดซีกับทะเลอัคบาในประเทศ จอร์แดน นครนี้แต่เดิมนั้นเป็นนครแห่งการค้าขนาดใหญ่ซึ่งต่อมาถูกละทิ้งเป็นเวลานานกว่า 700 ปี จนเมื่อมีนักสำรวจชาวสวิตเซอร์แลนด์ โยฮันน์ ลุควิก บวร์กฮาร์ท เดินทางผ่านมาพบเห็นเข้าเมื่อปี พ.ศ. 2355 (ค.ศ. 1812) ซึ่งปัจจุบันได้กลายเป็นสัญลักษณ์ที่สำคัญและเป็นแหล่งท่องเที่ยวที่มีนักท่องเที่ยวเข้าชมมากที่สุดของประเทศจอร์แดน
                 
             </h4><br>
-          <h4 style="font-size:22px;color:orange;"><b>Create at 312 BC</b></h4>
+          <h4 style="font-size:22px;color:rgb(0, 0, 0);"><b>Create at 312 BC</b></h4>
           </p>
       </div>
 
