--- a/7wonder/old/o7.html
+++ b/7wonder/old/o7.html
@@ -8,6 +8,13 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <title>Document</title>
     <style>
+      body{
+      background: url(../img/bg2.jpg) center center / cover no-repeat;
+      background-attachment: relative;
+	    background-position: center top;
+      background-repeat: no-repeat;
+      overflow: hidden;
+      }
       div{
         margin-top: 5%;
       }
@@ -23,8 +30,20 @@
     margin-right: auto;
     width: 100%;
 }
+.left {
+  margin-top:40%;
+  margin-left:48%;
+  position: absolute;
+  z-index: 1;
+  font-size: 20px;
+}
+
     </style>
 </head>
+<body>
+  <div class="btn btn-success left" >
+    <a href="../page.html">Back</a>
+</div>
 <div class="row"> 
   <section class="tm-2-col-img-text tm-2-col-img-lg-left">
 
@@ -38,7 +57,7 @@
             
             <h4>ตัวประคาภารมีความสูงเท่าใดไม่แน่ชัด แต่อยู่ในระหว่าง 200-600 ฟุต  สร้างด้วยหินอ่อนแกะสลัก ช่วงล่างเป็นรูปสี่เหลี่ยม ช่วงกลางเป็นรูปแปดเหลี่ยม และช่วงบนเป็นทรงกลม ยอดบนสุดของประภาคารนี้ มีภาชนะสำหรับใส่ถ่านหรือกองฟืน ทำหน้าที่เป็นตะเกียงขนาดใหญ่บนยอดนักประวัติศาสตร์สันนิษฐานว่าในเวลากลางวันจะปล่อยควัน ในเวลากลางคืนจะเป็นแสงไฟสว่างที่เห็นได้จากระยะไกล ซึ่งลุกโชติช่วงทั้งวันทั้งคืนเพื่อเป็นไฟสัญญาณไฟ บนยอดประภาคารนี้เห็นได้ไกลในทะเลเมดิเตอร์เรเนียนถึง 40 กิโลเมตร ซึ่งยังไม่ทราบว่าใช้วิธีใดในการจุดไฟและส่องแสง บ้างก็สันนิษฐานว่าใช้กระจกในการส่องแสง บ้างก็เชื่อว่าสามารถส่องแสงได้ถึง 4 ทาง แต่บางส่วนก็เชื่อว่า ส่องแสงได้เพียงแค่ 2 ทางเท่านั้น 
             </h4><br>
-          <h4 style="font-size:22px;color:orange;"><b>Create at 280 BC</b></h4>
+          <h4 style="font-size:22px;color:rgb(0, 0, 0);"><b>Create at 280 BC</b></h4>
           </p>
       </div>
 
